# dart-re-analyzer

./: .gitignore  Cargo.toml  GITHUB_PAGES_SETUP.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LICENSE  README.md  WEBSITE_STRUCTURE.md  analyzer_config.example.json  test_analyzer.sh
.github/copilot/: IMPLEMENTATION.md  README.md  instructions.md  mcp.json
.github/workflows/: README.md  rust-ci.yml
docs/: Gemfile  LSP.md  LSP_PROXY.md  MCP_SERVER.md  QUICKSTART.md  README.md  RULES.md  TREESITTER.md  _config.yml  index.md  lsp-proxy.md  lsp.md  mcp.md  quickstart.md  rules.md
docs/_layouts/: default.html
examples/: README.md  debug_tree.rs  treesitter_demo.rs
examples/ide-config/: README.md  vscode-settings.json
src/: error.rs  lib.rs  main.rs
src/analyzer/: mod.rs
src/config/: mod.rs
src/lsp/: client.rs  mod.rs  semantic.rs
src/mcp/: mod.rs
src/parser/: mod.rs
src/rules/: mod.rs  runtime.rs  style.rs
src/treesitter/: mod.rs
test_project/: README.md  pubspec.yaml
test_project/lib/: BadFileName.dart  runtime_rules_test.dart  style_rules_test.dart  unused_imports_test.dart
tests/: mcp_server_test.rs  runtime_rules_test.rs  style_rules_test.rs
