[package]
name = "dart-re-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Emmanuel Vaisse"]
description = "A high-performance Rust-based Dart/Flutter analyzer with MCP server support"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
regex = "1.10"
rayon = "1.10"
anyhow = "1.0"
thiserror = "1.0"
tree-sitter = "0.25"
tree-sitter-dart = "0.0.4"

[dev-dependencies]
tempfile = "3.8"
